updating get question function again

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="container">
         <h2 class="question"></h2>
          <div class="questcontainer">
-          <button class="btn"><span id="choiceA"></span></button>
-          <button class="btn"><span id="choiceB"></span></button>
-          <button class="btn"><span id="choiceC"></span></button>
-          <button class="btn"><span id="choiceD"></span></button>
+          <button class="btn" id="choiceA"></button>
+          <button class="btn" id="choiceB"></button>
+          <button class="btn" id="choiceC"></button>
+          <button class="btn" id="choiceD"></button>
         
         </div> 
     </div>
